--- a/website/newsletter/208/index.mdx
+++ b/website/newsletter/208/index.mdx
@@ -155,6 +155,10 @@ Mustafa (Director of Engineering) announced on X that Shopify finished migrating
 
 <Todo />
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/208/meme.jpg)](https://bsky.app/profile/brophdawg11.bsky.social/post/3l7ookbysyq2h)
+
+[![alt](/emails/issues/208/meme2.jpg)](https://x.com/sebastienlorber/status/1854177504891650303)
+
+[![alt](/emails/issues/208/meme3.jpg)](https://x.com/bunjavascript/status/1854005887817699831)
 
 See ya! 👋
