--- a/website/newsletter/208/index.mdx
+++ b/website/newsletter/208/index.mdx
@@ -1,12 +1,18 @@
 ---
 slug: /208
-title: "This Week In React #208: ..."
+title: "This Week In React #208: Compiler, Next.js, TanStack Start, Docusaurus, nuqs, Storybook, StyleX, React Navigation, Shopify, Reanimated, Nitro, BottomTabs, CocoaPods, Maestro, Rolldown, Container Queries..."
 authors: [slorber]
 date: 11-06-2024
 unlisted: true
 ---
 
 Hi everyone!
+
+No major React announcements this week, probably due to the US presidential election.
+
+But we still had a bunch of exciting React and React Native and great community articles. I'm particularly excited about the React Compiler direction, and the release of React Navigation 7 with a new screen preloading API. Shopify's React Native endorsement is also great news for our ecosystem. Of course, I'm happy to unveil what I've been working on for months on Docusaurus too!
+
+Don't forget to answer the [State of React 2024 survey](https://survey.devographics.com/en-US/survey/state-of-react/2024?source=this_week_in_react). It's closing next week, and we still have less answers than last year so far. If you have an audience, please help spread the word, and add a [`?source=my_name` parameter](https://github.com/Devographics/surveys/issues/250#issuecomment-2423485429) so that survey bias can be tracked.
 
 <!-- truncate -->
 
@@ -152,8 +158,6 @@ Mustafa (Director of Engineering) announced on X that Shopify finished migrating
 ---
 
 ## 🤭 Fun {#fun}
-
-<Todo />
 
 [![alt](/emails/issues/208/meme.jpg)](https://bsky.app/profile/brophdawg11.bsky.social/post/3l7ookbysyq2h)
 
