--- a/website/newsletter/209/index.mdx
+++ b/website/newsletter/209/index.mdx
@@ -157,8 +157,10 @@ You might also like:
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/209/meme.jpg)](https://x.com/AlemTuzlak/status/1849851249631559884)
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/209/meme2.jpg)](https://x.com/sebastienlorber/status/1850846134983434751)
+
+[![alt](/emails/issues/209/meme3.jpg)](https://x.com/_anniebabannie_/status/1846027717520904374)
 
 See ya! 👋
