--- a/website/newsletter/209/index.mdx
+++ b/website/newsletter/209/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /209
-title: "This Week In React #209: ..."
+title: "This Week In React #209: Next.js, Compiler, Motion, Remix, Storybook, Toldo, state-in-url, Expo 52, Screens, Skia List, Audio API, Edge-to-Edge, Windows, Godot, True Sheet, Nitro, Worklets, Node.js, TS, Rspack"
 authors: [slorber]
 date: 11-13-2024
 unlisted: true
@@ -8,7 +8,11 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This week has been calm on the React side, I couldn't really pick any headline despite various interesting releases and articles.
+
+Once again, the React Native ecosystem is on fire, with Expo 52, but not only!
+
+Last chance to answer the [State of React 2024](https://survey.devographics.com/en-US/survey/state-of-react/2024?source=this_week_in_react) survey that is closing soon. But don't worry, I'll now annoy you with another one that just opened 😃: [State of JS 2024](https://survey.devographics.com/en-US/survey/state-of-js/2024?source=this_week_in_react).
 
 <!-- truncate -->
 
@@ -137,7 +141,7 @@ You might also like:
 - 📦 [React Native Windows 0.76 \- Preview release of New Architecture](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.76.0)
 - 📦 [React Native Worklets Core 1.5 \- Support 0.76 and Nitro modules](https://github.com/margelo/react-native-worklets-core)
 - 📦 [Nitro 0.16 \- visionOS support](https://github.com/mrousavy/nitro/releases/tag/v0.16.0)
-- 📦 [React Native Godot \- Create immersive 3D experiences](https://github.com/calico-games/react-native-godot/tree/main)
+- 📦 [React Native Godot \- Create immersive 3D experiences](https://github.com/calico-games/react-native-godot)
 - 📦 [Radon IDE 0.0.22 beta \- Expo Router 4, touch indicators, deeplink, pasta from clipboard](https://github.com/software-mansion/radon-ide/releases/tag/v0.0.22-beta)
 - 🎙️ [RNR 313 \- React Native 0.75 & 0.76](https://reactnativeradio.com/episodes/rnr-313-react-native-075-076)
 
