--- a/website/newsletter/209/index.mdx
+++ b/website/newsletter/209/index.mdx
@@ -15,7 +15,9 @@ Last chance to answer the [State of React 2024](https://survey.devographics.com/
 
 We'd be very grateful if you'd share this newsletter or support us here :
 
-- [X]()
+- [X](https://slo.im/last/x)
+- [Bluesky](https://slo.im/last/b)
+- [LinkedIn](https://slo.im/last/l)
 
 <!-- truncate -->
 
