--- a/website/newsletter/209/index.mdx
+++ b/website/newsletter/209/index.mdx
@@ -13,7 +13,7 @@ Once again, the React Native ecosystem is on fire, with Expo 52, but not only!
 
 Last chance to answer the [State of React 2024](https://survey.devographics.com/en-US/survey/state-of-react/2024?source=this_week_in_react) survey that is closing soon. But don't worry, I'll now annoy you with another one that just opened 😃: [State of JS 2024](https://survey.devographics.com/en-US/survey/state-of-js/2024?source=this_week_in_react).
 
-We'd be very grateful if you'd share this newsletter or support us here :
+We'd be super grateful if you'd share this newsletter or support us here :
 
 - [X / Twitter](https://slo.im/last/x)
 - [Bluesky](https://slo.im/last/b)
