--- a/website/newsletter/_template/index.mdx
+++ b/website/newsletter/_template/index.mdx
@@ -10,9 +10,13 @@ Hi everyone!
 
 <Todo />
 
-<!-- truncate -->
+We'd be super grateful if you'd share this newsletter or support us here :
 
-**💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
+- [X / Twitter](https://slo.im/last/x)
+- [Bluesky](https://slo.im/last/b)
+- [LinkedIn](https://slo.im/last/l)
+
+<!-- truncate -->
 
 ---
 
