upgrade conf mentions

--- a/website/newsletter/210/index.mdx
+++ b/website/newsletter/210/index.mdx
@@ -10,9 +10,8 @@ Hi everyone!
 
 <Todo />
 
-*   🗓️ [React Day Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇩🇪 Berlin - 13 & 16 December - Hurry and grab your ticket to the conference as prices are about to go up ! And don’t forget your discount with code “TWIR”.
-    
-*   🗓️ [React Paris 2025](https://react.paris/?utm_source=Newsletter&utm_medium=thisweekinreact) -  🇫🇷 Paris - 21 March - One of the first conferences of the coming year ! Great speakers have been already announced, including Dominik 'TkDodo' Dorfmeister, Kent C. Dodds, Aurora Scharff. Get 20% off with our code "TWIR".
+- 🗓️ [React Day Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇩🇪 Berlin - 13 & 16 December - Hurry and grab your ticket to the conference as prices are about to go up ! And don’t forget your discount with code “TWIR”.
+- 🗓️ [React Paris 2025](https://react.paris/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇫🇷 Paris - 20 & 21 March - Kick off your year with one of the first dev conferences of 2025! Speakers include Dominik 'TkDodo' Dorfmeister, Kent C. Dodds, and Aurora Scharff. CFPs are open, and you can get 20% off tickets with code "TWIR"!
 
 We'd be super grateful if you'd share this newsletter or support us here :
 
@@ -38,16 +37,11 @@ import Support from "../_support.mdx";
 
 Handsontable is [a feature-rich data grid](https://handsontable.com/demo?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=twirnov20) designed for React developers who need a powerful, customizable, and accessible solution to manage complex data.
 
-*   A unique **spreadsheet-like interface** with sorting, filtering, and CRUD operations
-    
-*   Advanced operations like conditional formatting and **400 built-in formulas**, similar to Excel
-    
-*   **Customizable editors and renderers**, allowing dropdowns, menus or custom components within grid cells to fit specific use cases
-    
-*   **Optimized performance** for smooth and responsive interactions
-    
-*   **Accessibility with WCAG 2.1 compliance** for better support for users with disabilities
-    
+- A unique **spreadsheet-like interface** with sorting, filtering, and CRUD operations
+- Advanced operations like conditional formatting and **400 built-in formulas**, similar to Excel
+- **Customizable editors and renderers**, allowing dropdowns, menus or custom components within grid cells to fit specific use cases
+- **Optimized performance** for smooth and responsive interactions
+- **Accessibility with WCAG 2.1 compliance** for better support for users with disabilities
 
 Handsontable adapts to various use cases, from enterprise applications to simple websites, offering performance and flexibility trusted by companies worldwide.
 
@@ -73,14 +67,10 @@ Handsontable adapts to various use cases, from enterprise applications to simple
 
 Attention React enthusiasts: PSPDFKit is now **Nutrient**! 👋 We may have a new name, but our Web SDK is the same best in class choice you've come to rely on for viewing, annotating, and editing PDFs and other document types.
 
-*   🏎️ Get started quickly with a free trial and extensive documentation
-    
-*   ⏱️ Save time developing by leveraging the slick built-in UI and **Baseline-UI**, our new design system
-    
-*   🛠️ Leverage extensive APIs for processing and customization
-    
-*   🆘 Make use of our support and solution engineering team to get help from domain experts
-    
+- 🏎️ Get started quickly with a free trial and extensive documentation
+- ⏱️ Save time developing by leveraging the slick built-in UI and **Baseline-UI**, our new design system
+- 🛠️ Leverage extensive APIs for processing and customization
+- 🆘 Make use of our support and solution engineering team to get help from domain experts
 
 We've got you covered on **all platforms** from mobile to backend.
 
