upgrade conf mentions

--- a/website/newsletter/210/index.mdx
+++ b/website/newsletter/210/index.mdx
@@ -8,10 +8,13 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+INTRO:
+
+- 🗓️ [React Paris 2025](https://react.paris/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇫🇷 Paris - 20 & 21 March - Kick off your year with one of the first dev conferences of 2025! Speakers include Dominik 'TkDodo' Dorfmeister, Kent C. Dodds, and Aurora Scharff. CFPs are open, and you can get 20% off tickets with code "TWIR"!
+
+REACT:
 
 - 🗓️ [React Day Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇩🇪 Berlin - 13 & 16 December - Hurry and grab your ticket to the conference as prices are about to go up ! And don’t forget your discount with code “TWIR”.
-- 🗓️ [React Paris 2025](https://react.paris/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇫🇷 Paris - 20 & 21 March - Kick off your year with one of the first dev conferences of 2025! Speakers include Dominik 'TkDodo' Dorfmeister, Kent C. Dodds, and Aurora Scharff. CFPs are open, and you can get 20% off tickets with code "TWIR"!
 
 We'd be super grateful if you'd share this newsletter or support us here :
 
